<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.cs1530_group1.gardenapp.ViewSpeciesInfoActivity"
    android:orientation="vertical">

    <TextView android:text="Name: " android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/species_name"/>
    <TextView android:text="Description: " android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="3"
        android:id="@+id/species_descript"/>
    <TextView android:text="Type: " android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/species_type"/>
    <TextView android:text="Sun Level: " android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/species_sun"/>
    <TextView android:text="Plant Date: " android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/species_plant_date"/>
    <TextView android:text="Prune Date" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/species_prune_date"/>

    <TextView android:text="Size: " android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/species_size"/>
    <TextView android:text="Color: " android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:id="@+id/species_color"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_add"
            android:id="@+id/button_add"
            tools:ignore="NestedWeights" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_edit"
            android:id="@+id/button_edit" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:text="@string/button_del"
            android:id="@+id/button_del" />
    </LinearLayout>


</LinearLayout>
